--- a/resources/css/components/_3_custom-header-icons.scss
+++ b/resources/css/components/_3_custom-header-icons.scss
@@ -180,7 +180,7 @@ Usage: For LaraCMS
 }
 
 .header-menu-box{
-    @include breakpoint(md){
+    @include breakpoint(lg){
         flex: 1;
     }
 }
